# routers/router.go
@@ -11,63 +11,60 @@ import (
 	"github.com/bbhj/baobeihuijia/controllers"
 	"github.com/bbhj/baobeihuijia/models"
 
-	"encoding/json"
+	_ "encoding/json"
 	"fmt"
 	"github.com/astaxie/beego"
 	"github.com/astaxie/beego/context"
-	"github.com/ipipdotnet/datx-go"
+	"net/http"
+	"strings"
 )
 
 func init() {
+	// beego.InsertFilter(`((?!/lastest/wechatapi/wechat/login$).*)`, beego.BeforeRouter, func(ctx *context.Context) {
 	beego.InsertFilter("/*", beego.BeforeRouter, func(ctx *context.Context) {
-		fmt.Println("check token=====", ctx.Input.Header("Authorization"))
-		ipip(ctx.Input.IP())
-		// cookie, err := ctx.Request.Cookie("Authorization")
-		// fmt.Println("aaa", cookie, err)
+		if ("dev" != beego.AppConfig.String("runmode") ){
+			return
+		}
+		// cookie, _ := ctx.Request.Cookie("access_token")
+		accessToken := ctx.GetCookie("access_token")
+		fmt.Println("======access_token: ", accessToken)
 
-		// fmt.Println("check token=====", ctx.Request.Header("Authorization"))
-		// if err != nil || !hjwt.CheckToken(cookie.Value) {
-		//  http.Redirect(ctx.ResponseWriter, ctx.Request, "/", http.StatusMovedPermanently)
-		// }
+		// loginPage := "/lastest/wechatapi/wechat/login?"
+		loginPage := "/wechatapi/wechat/login?"
+		if "" == accessToken {
+			if !strings.Contains(ctx.Request.RequestURI, loginPage) {
+				fmt.Println("======redirect: Contains")
+				loginPage = beego.AppConfig.String("loginPage")
+				http.Redirect(ctx.ResponseWriter, ctx.Request, loginPage, http.StatusMovedPermanently)
+			} else {
+				fmt.Println("======", ctx.Request.RequestURI, loginPage)
+			}
+		} else {
+			if !models.ValidateAccessToken(accessToken) {
+				fmt.Println("======redirect: ValidateAccessToken")
+				loginPage = beego.AppConfig.String("loginPage")
+				http.Redirect(ctx.ResponseWriter, ctx.Request, loginPage, http.StatusMovedPermanently)
+			}
+		}
+
 	})
 
 	ns := beego.NewNamespace("/lastest",
-		// beego.NSNamespace("/wechat/small/login", beego.NSInclude(&controllers.LoginController{})),
-		// beego.NSNamespace("/wechat/small/login", beego.NSInclude(&controllers.LoginController{})),
 		beego.NSNamespace("/db/init", beego.NSInclude(&controllers.DBController{})),
-		// beego.NSNamespace("/wechatapi/small/topics", beego.NSInclude(&controllers.ArticleController{})),
+		beego.NSNamespace("/lbs", beego.NSInclude(&controllers.BaiduLBSController{})),
 		beego.NSNamespace("/wechatapi/small/admin", beego.NSInclude(&controllers.AdminController{})),
 		beego.NSNamespace("/wechatapi/small/article", beego.NSInclude(&controllers.ArticleController{})),
-		// beego.NSNamespace("/wechatapi/small/summary", beego.NSInclude(&controllers.SummaryController{})),
 		beego.NSNamespace("/wechatapi/small/comment", beego.NSInclude(&controllers.CommentController{})),
 		beego.NSNamespace("/wechatapi/small/contact", beego.NSInclude(&controllers.ContactController{})),
 		beego.NSNamespace("/wechatapi/small/user", beego.NSInclude(&controllers.UserController{})),
 		beego.NSNamespace("/wechatapi/small/location", beego.NSInclude(&controllers.LocationController{})),
 		beego.NSNamespace("/wechatapi/small/config", beego.NSInclude(&controllers.ConfigController{})),
 		beego.NSNamespace("/wechatapi/qcloud/wecos", beego.NSInclude(&controllers.WecosController{})),
+		beego.NSNamespace("/wechatapi/wechat/template/message", beego.NSInclude(&controllers.SendWechatTemplateMessage{})),
+		// beego.NSNamespace("/wechatapi/small/profile", beego.NSInclude(&controllers.ProfileController{})),
+		// 客服系统
 		beego.NSNamespace("/wechatapi/customer/service", beego.NSInclude(&controllers.CustomerController{})),
+		beego.NSNamespace("/wechatapi/wechat/", beego.NSInclude(&controllers.WechatController{})),
 	)
 	beego.AddNamespace(ns)
-}
-
-func ipip(ip string) {
-	path := "keys/17monipdb.datx"
-	city, err := datx.NewCity(path) // For City Level IP Database
-	if err == nil {
-		var ipip models.Ipip
-		// loc, err := city.FindLocation("218.17.197.194")
-		loc, err := city.FindLocation(ip)
-		if err == nil {
-			// fmt.Println(string(loc.ToJSON()))
-			fmt.Println(loc)
-			err := json.Unmarshal(loc.ToJSON(), &ipip)
-			if err == nil {
-				ipip.IP = ip
-				fmt.Println(ipip)
-				models.InsertIpip(ipip)
-			} else {
-				fmt.Println("json unmarshal err: ", err)
-			}
-		}
-	}
 }
